Added footer info

--- a/cart.html
+++ b/cart.html
@@ -43,6 +43,8 @@
     <div class="container">
       &copy; 2025 MyShop. All rights reserved.
     </div>
+    <p class="mb-0 small">This website is a demo template for portfolio purposes. No real transactions or shipments will be processed.</p>
+
   </footer>
 
    <!-- JavaScript Section -->
