--- a/checkout.html
+++ b/checkout.html
@@ -100,6 +100,13 @@
   </div>
 </div>
 
+<footer class="bg-dark text-white text-center py-3">
+  <div class="container">
+    &copy; 2025 MyShop. All rights reserved.
+  </div>
+  <p class="mb-0 small">This website is a demo template for portfolio purposes. No real transactions or shipments will be processed.</p>
+</footer>
+
 <script type="module">
   const cart = JSON.parse(localStorage.getItem('cart')) || [];
   const cartSummary = document.getElementById('cart-summary');
