--- a/gallery.html
+++ b/gallery.html
@@ -41,6 +41,7 @@
     <div class="container">
       &copy; 2025 MyShop. All rights reserved.
     </div>
+    <p class="mb-0 small">This website is a demo template for portfolio purposes. No real transactions or shipments will be processed.</p>
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
